--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.536.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
@@ -29,7 +30,8 @@
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "three": "^0.183.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
